# protobuf-client-python

./: README.md  ignore_me.py  pyproject.toml
proto_client/: main.py
proto_client/proto_messages/: messages.py
